@@ -1,6 +1,11 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- Duktape support for Metric Age / Stale
+  New Duktape methods
+    OvmsMetrics.IsStale
+    OmvsMetrics.IsFresh
+    OvmsMetrics.Age
 - MG EV Added support for MG5 (2020 - 2023) Short Range
 - MG EV Added support for MG ZS EV (2023 - ) and MG5 (2020 - 2023) Long Range
 - OVMS Server v3 metrics filtering
